--- a/.gitattributes
+++ b/.gitattributes
@@ -54,3 +54,18 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
+
+#UnityYamlMerge
+*.cs diff=csharp text
+*.cginc text
+*.shader text
+*.unity merge=unityyamlmerge eol=lf
+*.prefab merge=unityyamlmerge eol=lf
+*.mat -merge eol=lf
+*.anim -merge eol=lf
+*.physicMaterial -merge eol=lf
+*.physicsMaterial2D -merge eol=lf
+*.asset -merge eol=lf
+*.meta -merge eol=lf
+*.controller -merge eol=lf
+*.spriteatlas -merge eol=lf
